# rl_hnav

./: .gitignore  .gitmodules  CONTRIBUTORS.md  README.md  diag_gz_poses.py  diag_joints.py  getCloud_frameid_probe.py  getDog_odom_probe.py  patch_world.sh
docker/: Dockerfile  docker-compose.yml
maps/: g1_map.pgm  g1_map.yaml  map.pgm  map.yaml
maps/test/: g1_trail_architecture.drawio  map.yaml
src/g1_description/: package.xml  setup.cfg  setup.py
src/g1_description/urdf/: g1_23dof.urdf  g1_23dof.xml  g1_23dof_1.urdf  g1_23dof_mode_10.urdf  g1_23dof_mujoco.urdf  g1_23dof_old.xml  g1_23dof_origin.urdf  g1_23dof_rev_1_0.urdf  g1_29dof.urdf  g1_29dof_lock_waist.urdf  g1_29dof_lock_waist_rev_1_0.urdf  g1_29dof_lock_waist_with_hand_rev_1_0.urdf  g1_29dof_mode_11.urdf  g1_29dof_mode_12.urdf  g1_29dof_mode_13.urdf  g1_29dof_mode_14.urdf  g1_29dof_mode_15.urdf  g1_29dof_mode_16.urdf  g1_29dof_rev_1_0.urdf  g1_29dof_rev_1_0_with_inspire_hand_DFQ.urdf  g1_29dof_rev_1_0_with_inspire_hand_FTP.urdf  g1_29dof_with_hand.urdf  g1_29dof_with_hand_rev_1_0.urdf  g1_comp.urdf  g1_dual_arm.urdf  g1_fake.urdf.xacro
src/g1_gazebo/: package.xml  setup.cfg  setup.py
src/g1_gazebo/launch/: spawn_g1.launch.py  spawn_g1.launch_.py
src/g1_gazebo/worlds/: empty.world.sdf  my_house.world  office.world  (+2 more)
src/g1_nav2/: package.xml  setup.cfg  setup.py
src/gazebo_mujoco_pose_sync/: CMakeLists.txt  package.xml
src/gazebo_mujoco_pose_sync/src/: mujoco_pose_model_plugin.cpp
src/humanoid_nav_bridge/: package.xml  setup.cfg  setup.py
src/rl_sar/: .gitignore  build.sh
(+46 files in other folders)
